# neo4j_playground

./: .gitignore  REDME.md
neo4j_operator/: docker-compose.yml
python_operator/: init_operator.py  nodes.csv  relationships.csv  requirements.txt
rust_operator/: Cargo.toml  README.md
rust_operator/examples/: neo4rs_sync.rs  rusted_cypher_sync.rs
