[package]
name = "rust_operator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.26"
neo4rs = "0.5.9"
rusted_cypher = "1.1.0"
tokio = "1.25.0"
uuid = { version = "1.3.0", features = ["v4"] }
